--- a/assets/jade/messagedetail.jade
+++ b/assets/jade/messagedetail.jade
@@ -3,12 +3,10 @@ div#navbar
     a(ui-sref='messageslist')
       i.fa.fa-arrow-left
   div.navsection.aligncenter
-    span {{conversation.to}}
+    span {{contact.number}}
   div.navsection.alignright
 div#conversationlist.scrollable
   ul
-    li
-      input(type="text" ng-hide="conversation.to")
     li(ng-repeat="c in conversation")
       div.message(message="c"){{c.message}}
 div#messageentry
