--- a/assets/jade/messageslist.jade
+++ b/assets/jade/messageslist.jade
@@ -5,11 +5,11 @@ div#navbar
   div.navsection.aligncenter
     span Messages
   div.navsection.alignright
-    a(ui-sref='newmessagedetail')
+    a
       i.fa.fa-plus
 div#content.scrollable
   div#messageslist
     ul
-      a(ng-repeat="c in conversations" ui-sref="messagedetail({id:c.Conversation.id})")
-          li{{c.Conversation.message}}
+      a(ng-repeat="c in conversations" ui-sref="messagesdetail({id:c.Contact.id, Contact:c.Contact.number})")
+          li{{c.Contact.number}}<br />{{c.LastMessage}}
             i.fa.fa-arrow-right.alignright
