--- a/assets/jade/springboard.jade
+++ b/assets/jade/springboard.jade
@@ -24,9 +24,10 @@ div#springboard
     li
       i.fa.fa-photo
       span Photos
-    li
-      i.fa.fa-user-secret
-      span Secret
+    a(ui-sref='terminal')
+      li
+        i.fa.fa-user-secret
+        span Secret
     li
       a(ui-sref="login")
         i.fa.fa-lock
