Fixed #6 - Messaging from the contacts app.
Two buttons have been added to the contacts app, one for opening the messaging app for the selected user and another for opening the phone app and pre-populating the number for the selected user.

--- a/assets/jade/contacts.jade
+++ b/assets/jade/contacts.jade
@@ -8,4 +8,10 @@ div#navbar
 div#content.scrollable
   div#contactslist
     ul
-      li(ng-repeat="s in contacts") {{s.number}}
+      li(ng-repeat="s in contacts")
+        span {{s.number}}
+        span#buttons
+          a(ui-sref="messagesdetail({id:s.id})")
+              i.fa.fa-comment
+          a(ui-sref="phone({number:s.number})")
+            i.fa.fa-phone
