--- a/assets/jade/phone.jade
+++ b/assets/jade/phone.jade
@@ -9,7 +9,7 @@ div#content
   div#phoneview
     div#output
       div#padding
-      div#numberoutput
+      div#numberoutput {{number}}
       div#backbtn
         i.fa.fa-remove
     div#numbergrid
