--- a/assets/jade/phone.jade
+++ b/assets/jade/phone.jade
@@ -5,29 +5,28 @@ div#navbar
   div.navsection.aligncenter
     span Phone
   div.navsection
-div#content
-  div#phoneview
-    div#output
-      div#padding
-      div#numberoutput {{number}}
-      div#backbtn
-        i.fa.fa-remove
-    div#numbergrid
-      div.row
-        div.numkey 1
-        div.numkey 2
-        div.numkey 3
-      div.row
-        div.numkey 4
-        div.numkey 5
-        div.numkey 6
-      div.row
-        div.numkey 7
-        div.numkey 8
-        div.numkey 9
-      div.row
-        div.numkey *
-        div.numkey 0
-        div.numkey #
-      div.row
-        i#callbtn.fa.fa-phone.numkey
+div#phoneview.content-view
+  div#output
+    div#padding
+    div#numberoutput {{number}}
+    div#backbtn
+      i.fa.fa-remove
+  div#numbergrid
+    div.row
+      div.numkey 1
+      div.numkey 2
+      div.numkey 3
+    div.row
+      div.numkey 4
+      div.numkey 5
+      div.numkey 6
+    div.row
+      div.numkey 7
+      div.numkey 8
+      div.numkey 9
+    div.row
+      div.numkey *
+      div.numkey 0
+      div.numkey #
+    div.row
+      i#callbtn.fa.fa-phone.numkey
