--- a/assets/scss/_phoneview.scss
+++ b/assets/scss/_phoneview.scss
@@ -1,4 +1,4 @@
-#content {
+#phoneview {
     #output {
         height:70px;
         background:linear-gradient(rgb(161, 184, 255), rgb(199, 199, 255));
