--- a/assets/jade/messagedetail.jade
+++ b/assets/jade/messagedetail.jade
@@ -5,11 +5,12 @@ div#navbar
   div.navsection.aligncenter
     span {{contact.number}}
   div.navsection.alignright
-div#conversationlist.scrollable
-  ul
-    li(ng-repeat="c in conversation")
-      div.message(message="c"){{c.message}}
-div#messageentry
-  input#msgbox(type="text" ng-model="newmessage")
-  div#sendmsgbtn(ng-click="sendmsg(newmessage)")
-    i.fa.fa-send-o
+div#messagedetail.content-view
+  div.scrollable.content-view
+    ul.scrollable
+      li(ng-repeat="c in conversation")
+        div.message(message="c"){{c.message}}
+  div#messageentry
+    input#msgbox(type="text" ng-model="newmessage")
+    div#sendmsgbtn(ng-click="sendmsg(newmessage)")
+      i.fa.fa-send-o
