--- a/assets/scss/_contacts.scss
+++ b/assets/scss/_contacts.scss
@@ -5,7 +5,7 @@
         }
         li {
             padding: 25px;
-            border-top:grey 1px solid;
+            border-bottom:grey 1px solid;
             // cursor:pointer;
             #buttons {
                 float: right;
