--- a/assets/scss/_messagedetail.scss
+++ b/assets/scss/_messagedetail.scss
@@ -1,18 +1,19 @@
-#conversationlist {
-    width:inherit;
-    height:500px;
+#messagedetail {
     ul {
         li {
-            padding: 0.5rem;
+            width:100%;
+            float:left;
+            padding: 0.5rem 0 0.5rem 0;
             input {
                 width: 100%;
             }
         }
     }
     .message {
+        margin: 0 0.5rem 0 0.5rem;
         width:10rem;
-        margin: 5px 0px 5px 0px;
-        padding:7px;
+        // margin: 5px 0px 5px 0px;
+        padding:0.4rem;
         border-radius:0.6rem;
         box-shadow:rgba(0, 0, 0, 0.54) 0px 2px 3px;
     }
@@ -22,13 +23,17 @@
         float:left;
     }
     .message-right {
-        background-color: green;
+        background-color: #27ae60;
         color:white;
         float:right;
     }
 }
 #messageentry {
-    padding-top:0.3rem;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    padding:0.4rem 0 0.4rem 0;
+    background:#95a5a6;
     input {
         float:left;
         width:12rem;
