--- a/assets/scss/_springboard.scss
+++ b/assets/scss/_springboard.scss
@@ -1,10 +1,12 @@
 #springboard {
-    padding-top:20px;
+    // padding-top:20px;
     text-align:center;
-    height:560px;
+    height:inherit;
     background:url('/images/bg.jpg');
     ul {
-        
+        a {
+            display:inline-block;
+        }
         li {
             box-shadow:rgba(0, 0, 0, 0.15) 0px 6px 10px;
             display:inline-block;
