--- a/assets/scss/_titlebar.scss
+++ b/assets/scss/_titlebar.scss
@@ -1,10 +1,13 @@
 #phone {
     #titlebar {
-        width:inherit;
-        height:20px;
+        color:black;
         background-color:black;
+        width:inherit;
+        height:1.5rem;
         display:flex;
-        color:white;
+        @media (min-height: 40rem) and (min-width: 25rem) {
+            color:white;
+        }
         .titlesection:last {
             text-align:right;
         }
