--- a/Dev/client/app/MessageDetail/messageDetailPartial.jade
+++ b/Dev/client/app/MessageDetail/messageDetailPartial.jade
@@ -1,6 +1,6 @@
 div#navbar
   div.navsection
-    a(ui-sref='messageslist')
+    a(ui-sref='messagelist')
       i.fa.fa-arrow-left
   div.navsection.aligncenter
     span {{contact.number}}
