--- a/Dev/client/app/Springboard/springboardPartial.jade
+++ b/Dev/client/app/Springboard/springboardPartial.jade
@@ -4,11 +4,11 @@ div#springboard
       li
         i.fa.fa-phone
         span Phone
-    a(ui-sref='messageslist')
+    a(ui-sref='messagelist')
       li
         i.fa.fa-comment
         span Messages
-    a(ui-sref='contacts')
+    a(ui-sref='contactlist')
       li
         i.fa.fa-list
         span Contacts
