--- a/Dev/client/app/MessageList/messageListPartial.jade
+++ b/Dev/client/app/MessageList/messageListPartial.jade
@@ -5,8 +5,8 @@ div#navbar
   div.navsection.aligncenter
     span Messages
   div.navsection.alignright
-div#messageslist.content-view.scrollable
+div#messagelist.content-view.scrollable
   ul
-    a(ng-repeat="c in conversations" ui-sref="messagesdetail({id:c.Contact.id, Contact:c.Contact.number})")
+    a(ng-repeat="c in conversations" ui-sref="messagedetail({id:c.Contact.id, Contact:c.Contact.number})")
         li{{c.Contact.number}}<br />{{c.LastMessage}}
           i.fa.fa-arrow-right.alignright
