Logging in and session persistence.
Users can now log into the site and persist a session. Some issues with reloading pages where the user isn't being retrieved.

Fixes #16.

--- a/Dev/client/app/Springboard/springboardPartial.jade
+++ b/Dev/client/app/Springboard/springboardPartial.jade
@@ -26,8 +26,8 @@ div#springboard
       span Photos
     a(ui-sref='terminal')
       li
-        i.fa.fa-user-secret
-        span Secret
+        i.fa.fa-terminal
+        span Terminal
     li
       a(ui-sref="login")
         i.fa.fa-lock
