--- a/Dev/server/views/index.jade
+++ b/Dev/server/views/index.jade
@@ -13,11 +13,12 @@ html
     +style('/css/style.css')
     +style('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
     +script('//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-    +style('https://fonts.googleapis.com/css?family=Open+Sans')
+    // +style('https://fonts.googleapis.com/css?family=Open+Sans')
     +script('https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js')
     +script('//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.8.0/lodash.min.js')
     +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular.js')
     +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-animate.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-cookies.js')
     +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-resource.js')
     +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-touch.js')
     +script('https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js')
