Fixes #11 - Disable autocorrect
The autocorrect and autocapitalize features have been disabled in the terminal using the HTML tags on the input element. The messages didn't seem too bad so they can stay.

--- a/Dev/client/app/MessageDetail/messageDetailPartial.jade
+++ b/Dev/client/app/MessageDetail/messageDetailPartial.jade
@@ -11,6 +11,6 @@ div#messagedetail.content-view
       li(ng-repeat="c in conversation")
         div.message(message="c") {{c.message}}
   div#messageentry
-    input#msgbox(type="text" ng-model="newmessage")
+    input#msgbox(type="text" autocomplete="off" ng-model="newmessage")
     div#sendmsgbtn(ng-click="sendmsg(newmessage)")
       i.fa.fa-send-o
