Updated angular to 1.4.0.

--- a/Dev/server/views/index.jade
+++ b/Dev/server/views/index.jade
@@ -16,11 +16,11 @@ html
     // +style('https://fonts.googleapis.com/css?family=Open+Sans')
     +script('https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js')
     +script('//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.8.0/lodash.min.js')
-    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular.js')
-    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-animate.js')
-    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-cookies.js')
-    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-resource.js')
-    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular-touch.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-animate.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-resource.js')
+    +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-touch.js')
     +script('https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js')
     +script('//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js')
     +script('/js/inobounce.min.js')
