A whole heap of stuff.
It's been a good long while since I've worked on this and all these changes were in the working copy.

--- a/Dev/client/app/Springboard/springboardPartial.jade
+++ b/Dev/client/app/Springboard/springboardPartial.jade
@@ -12,9 +12,10 @@ div#springboard
       li
         i.fa.fa-list
         span Contacts
-    li
-      i.fa.fa-microphone
-      span Record
+    a(ui-sref='settings')
+      li
+        i.fa.fa-cogs
+        span Settings
     li
       i.fa.fa-camera
       span Camera
