--- a/Dev/server/views/index.jade
+++ b/Dev/server/views/index.jade
@@ -23,6 +23,7 @@ html
     +script('https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-touch.js')
     +script('https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js')
     +script('//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js')
+    +script('//localhost:35729/livereload.js')
     +script('/js/inobounce.min.js')
     +script('/js/app.js')
   body(ng-app="app" ng-controller="DeviceController")
